infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: banking.dev
      http:
        paths:
          - path: /api/v1/user/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-srv
                port:
                  number: 3000

          - path: /api/v1/account/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: account-srv
                port:
                  number: 3000

          - path: /api/v1/txn/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: transaction-srv
                port:
                  number: 3000

          - path: /api/v1/notification/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification-srv
                port:
                  number: 3000

          - path: /api/v1/report/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: report-srv
                port:
                  number: 3000

          - path: /api/v1/card/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: card-srv
                port:
                  number: 3000

          - path: /api/v1/expiration/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: expiration-srv
                port:
                  number: 3000


          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
